--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -99,18 +99,21 @@ title = "०१"
 <details><summary>मल्लिनाथः</summary>
 
 यमिति ॥ सर्वे च ते शैलाश्च सर्वशैलाः । 'पूर्वकालैकसर्वजरत्पुराणनवकेवलाः समानाधिकरणेन' इति समासः । यं हिमालयं वत्सं परिकल्प्य विधाय दोरदक्षे दोहनसमर्थे मेरौ दोग्धरि स्थिते सति । 'यस्य च भावेन भावलक्षणम्' इति सत्पमो । पृथूपदिष्टां पृथुना वैन्येनोपदिष्टामीदृक्तया प्रदर्शितां धरित्रीम् । गोरुपधरामिति शेषः ।'गौर्भूत्वा तु वसुन्धरा' इति विष्णुपुराणात् । 'अकथितं च' इति कर्मत्वम् । भास्वन्ति च भास्वत्त्यश्च भास्वन्ति द्युतिमन्ति । ओषधिविशेषणं वैतत् । 'नपुंसकमनपुंसकेन-' इत्यादिना नपुंसकैकशेषः । रत्नानि मणीञ्जातिश्रेष्ठवस्तूनि च । 'रत्नं श्रेष्ठे मणावपि' इति विश्वः । 'जातौ जातौ यदुत्कृष्टं तद्रत्नमिति कथ्यते' इति यादवः । महौषधीश्च संजीवनीप्रभृतीश्च क्षीरत्वेन परिणता इति शेषः । 'ताः क्षीरपरिणामिनीः' इति विष्णुपुराणात् । दुदुहुः । 'दुहियाच -' इत्यादिना व्दिकर्मकत्वम् । अत्र प्रयोजकत्वेऽपि शैलानां 'पञ्चभिर्हलैः कर्षति ग्रामं ग्रामणीः' इतिवत्तत्समर्थाचरणात्कर्तृत्वेन व्यपदेशः । दुहेः स्वरितेत्त्वेऽप्यकर्त्रभिप्रायविवक्षायां परस्मैपदम् । अत्रार्थे प्रमाणम्- गौर्भूमिरचलाः सर्वे कर्तारोऽत्र पयांसि च । ओषध्यश्चैव भास्वन्ति रत्नानि विविधानि च ॥ वत्सश्च हिमवानासीद्दोग्धा मेरुर्महागिरिः ॥ ' इति । एतेन वत्सस्य मातुः प्रेमास्पदत्वादस्य सारग्राहित्वं गम्यते । तथा चास्य नगस्य रत्नबिशेषभोक्तृत्वान्नगाधिराजत्वं युक्तमिति भावः । अत्र हिमवव्दर्णनस्य प्रकृतत्वात्तद्गतौषधिरत्नानां व्दयानामपि प्रकृतत्त्वात्तेषां दोहनक्रियारुपसमानधर्मसंवन्धादौपम्यस्य गम्यत्वात्केवलप्राकरणिकविषयस्तुल्ययोगिता नामालंकारः । तदुक्तम् - 'प्रस्तुतानां तथान्येषां केवलं तुल्यधर्मतः । औपम्यं गम्यते यत्र सा मता तुल्ययोगिता ॥ ' न चात्र रुपकपरिणामाद्यलंकारशङ्का कार्या तेषामारोपहेतुत्वात् । हिमहेमाचलादिषु वत्सत्वदोग्धृत्वादीनामागमसिध्दत्वेनानारोप्यमाणत्वादिति ॥ 1. 2 ॥
+
+ननु हिमदोषदूषितस्य तस्यात्यन्तमनभिगम्यत्वाच्छि्वत्रिण इव सर्वमपि सौभाग्यं विफलमित्याशङ्क्याह -
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-ननु हिमदोषदूषितस्य तस्यात्यन्तमनभिगम्यत्वाच्छि्वत्रिण इव सर्वमपि सौभाग्यं विफलमित्याशङ्क्याह -    
-अनन्तरत्नप्रभवस्य यस्य हिमं न सौभाग्यविलोपि जातम्।  
-एको हि दोषो गुणसन्निपाते निमज्जतीन्दोः किरणेष्विवाङ्कः ॥ 1. 3 ॥   
+अनन्त-रत्न-प्रभवस्य यस्य  
+**हिमं न सौभाग्य-विलोपि** जातम्।  
+एको हि **दोषो** गुण-सन्निपाते  
+**निमज्जतीन्दोः** किरणेष्विवाङ्कः॥३॥  
++++(अ५ र५)+++
 </details>
 
 <details><summary>मूलम्</summary>
 
-ननु हिमदोषदूषितस्य तस्यात्यन्तमनभिगम्यत्वाच्छि्वत्रिण इव सर्वमपि सौभाग्यं विफलमित्याशङ्क्याह -    
 अनन्तरत्नप्रभवस्य यस्य हिमं न सौभाग्यविलोपि जातम्।  
 एको हि दोषो गुणसन्निपाते निमज्जतीन्दोः किरणेष्विवाङ्कः ॥ 1. 3 ॥   
 </details>
@@ -127,8 +130,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यश्चाप्सरोविभ्रममण्डनानां संपादयित्रीं शीखरैबिभर्ति ।  
-।लाहकच्छेदविभक्तरागामकालसंध्यामिव धातुमत्ताम् ॥ 1.4 ॥   
+यश् चाप्सरो-विभ्रम-मण्डनानां  
+सम्पादयित्रीं शीखरैर् **बिभर्ति**।  
+बलाहक+++(=मेघ)+++-च्छेद-विभक्त-रागाम्  
+अकाल-सन्ध्याम् इव **धातुमत्ताम्**॥ १.४॥  
++++(अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -150,8 +156,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-आमेखलं सञ्चरतां घनानां छायामधः सानुगतां निषेव्य ।  
-उव्देजिता वृष्टिभिराश्रयन्ते श्रृङ्गाणि यस्यातपवन्ति सिध्दाः ॥ 1. 5 ॥  
+आ-मेखलं सञ्चरतां **घनानां**  
+**छायाम्** अधः सानु-गतां **निषेव्य**।  
+उद्-वेजिता वृष्टिभिर् **आश्रयन्ते**  
+**श्रृङ्गाणि** यस्यातपवन्ति **सिद्धाः**॥५॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -174,8 +182,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतव्दिपानाम् ।  
-विदन्ति मार्गं नखरन्ध्रमुक्तैर्मुक्ताफलैः केसरिणां किराताः ॥ 1. 6 ॥   
+पदं तुषार-स्रुति-धौत-रक्तं  
+यस्मिन्न् अदृष्ट्वा ऽपि हत-द्विपानाम्।  
+**विदन्ति मार्गं** नख-रन्ध्र-मुक्तैर्  
+मुक्ता-फलैः **केसरिणां** किराताः॥६॥+++(4)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -196,8 +206,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-न्यस्ताक्षरा धातुरसेन यत्र भूर्जत्वचः कुञ्जरबिन्दुशोणाः ।  
-व्रजन्ति विद्याधरसुन्दरीणामूनङ्गलेखक्रिययोपयोगम् ॥ 1. 7 ॥   
+न्यस्ताक्षरा धातु-रसेन यत्र  
+**भूर्ज-त्वचः** कुञ्जर-+++(वयोजन्य-पद्मकाख्य-)+++बिन्दु-शोणाः।  
+**व्रजन्ति** विद्या-धर-सुन्दरीणाम्  
+अनङ्ग-लेख-क्रियया **+उपयोगम्**॥७॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -218,8 +230,12 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यः पूरयन्कीचकरन्ध्रभागान्दरीमुखोत्थेन समीरणेन।  
-उद्गास्यतामिच्छति किंनराणां तानप्रदायित्वमिवोपगन्तुम् ॥ 1. 8 ॥    
+यः पूरयन् कीचक-रन्ध्रभागान्  
+दरी-मुखोत्थेन समीरणेन।  
+उद्गास्यताम् **इच्छति** किन्नराणां  
++++(स्वरान्तर-प्रवर्तको वंश-वाद्य-साध्य--स्वर-विशेष-)+++
+**तान-प्रदायित्वम्** इवोपगन्तुम्॥८॥
++++(अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -240,8 +256,12 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कपोलकण्डूः करिभिर्विनेतुं विघट्टितानां सरलद्रुमाणाम् ।  
-यत्र स्नुतक्षीरतया प्रसूतः सानुनि गन्धः सुरभीकरोति ॥ 1. 9 ॥   
+कपोल-कण्डूः करिभिर् विनेतुं  
+विघट्टितानां सरल-द्रुमाणाम्।  
+यत्र स्नुत-क्षीरतया प्र-सूतः  
+सानूनि **गन्धः सुरभी-करोति**॥९॥
++++(अ५)+++
+
 </details>
 
 <details><summary>मूलम्</summary>
@@ -262,8 +282,12 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वनेचराणां वनितासखानां दरीगृहोत्सङ्गनिषक्तभासः ।  
-भवन्ति यत्रौषधयो रजन्यामतैलपूराः सुरतप्रदीपाः ॥ 1. 10 ॥   
+{{< figure src="../images/bioluminescent-fungii.jpg" title="" class="thumbnail">}}
+
+वने-चराणां वनिता-सखानां  
+दरी-गृहोत्सङ्ग+++(=अभ्यन्तर)+++-निषक्त-भासः।  
+**भवन्ति यत्रौषधयो** रजन्याम्  
+अतैल-पूराः **सुरत-प्रदीपाः**॥१०॥+++(4)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -279,13 +303,18 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-वनेचराणामिति ॥ यत्र हिमाद्रौ रजन्यां दर्यः कन्दरा एव गृहास्तेषामुत्सङ्गेष्वभ्यन्तरेषु निषक्ताः संक्रान्ता भासो यासां ता ओषधयस्तृणज्योतींषि । 'अग्नावोषधीषु च तेजो निधाय रविरस्तं याति' इत्यागमः । वनितानां सखायो वनितासखाः । 'राजाहःसखिभ्यष्टच्' । तेषाम् । रममाणानामित्यर्थः । वने चरन्तीति वनेचराः किराताः । 'चरेष्टः' इति टप्रत्ययः । 'तत्पुरुषे कृति बहुलम्' इत्यलुक् । तेषां वनेचराणाम् । अतैलपूरः । अनपेक्षिततैलसेका इत्यर्थः । सुरतकर्मणि प्रदीपा भवन्ति । अत्रौषधीष्वारोप्यमाणस्य प्रदीपत्वस्य प्रकृतोपयोगित्वात्परिणामालंकारः । तदुक्तम्- 'आरोप्यमाणस्य प्रकृतोपयोगित्वे परिणामः' इति । तथा प्रदीपकारणतैलपूरणनिषेधादकारणकार्येत्पत्तिर्लक्षणा विभावना चेत्युभयोः संसृष्टिः ॥ 1. 10 ॥
+2वनेचराणामिति ॥ यत्र हिमाद्रौ रजन्यां दर्यः कन्दरा एव गृहास्तेषामुत्सङ्गेष्वभ्यन्तरेषु निषक्ताः संक्रान्ता भासो यासां ता ओषधयस्तृणज्योतींषि । 'अग्नावोषधीषु च तेजो निधाय रविरस्तं याति' इत्यागमः । वनितानां सखायो वनितासखाः । 'राजाहःसखिभ्यष्टच्' । तेषाम् । रममाणानामित्यर्थः । वने चरन्तीति वनेचराः किराताः । 'चरेष्टः' इति टप्रत्ययः । 'तत्पुरुषे कृति बहुलम्' इत्यलुक् । तेषां वनेचराणाम् । अतैलपूरः । अनपेक्षिततैलसेका इत्यर्थः । सुरतकर्मणि प्रदीपा भवन्ति । अत्रौषधीष्वारोप्यमाणस्य प्रदीपत्वस्य प्रकृतोपयोगित्वात्परिणामालंकारः । तदुक्तम्- 'आरोप्यमाणस्य प्रकृतोपयोगित्वे परिणामः' इति । तथा प्रदीपकारणतैलपूरणनिषेधादकारणकार्येत्पत्तिर्लक्षणा विभावना चेत्युभयोः संसृष्टिः ॥ 1. 10 ॥
 </details>
+
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-11-20.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उद्वेजयत्यङ्गलिपार्ष्णिभागान्मार्गे शिलीभूतहिमेऽपि यत्र ।  
-न दुर्वहश्रोणिपयोधरार्ता भिन्दन्ति मन्दां गतिमश्वमुख्यः ॥ 1. 11 ॥   
+**उद्वेजयत्य्** अङ्गुलि-पार्ष्णि-भागान्  
+मार्गे शिली-भूत-**हिमे ऽपि** यत्र।  
+**न** दुर्-वह-श्रोणि-पयो-धरार्ता  
+**भिन्दन्ति मन्दां गतिम्** अश्व-मुख्यः॥११॥  
++++(न शीघ्रं यन्तीति।)+++
 </details>
 
 <details><summary>मूलम्</summary>
