--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -336,8 +336,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-दिवाकराद्रक्षति यो गुहासु लीनं दिवाभीतमिवान्धकारम् ।  
-क्षुद्रेऽपि नूनं शरणं प्रपन्ने ममत्वमुच्चैःशिरसां सतीव ॥ 1. 12 ॥ 
+दिवा-कराद् **रक्षति** यो गुहासु  
+लीनं दिवा-भीतम् **इवान्धकारम्**।  
+क्षुद्रे ऽपि नूनं शरणं प्रपन्ने  
+ममत्वम् उच्चैः-शिरसां सति+इव॥१२॥  
++++(र५ अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -359,8 +362,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-लाङ्गूलविक्षेपविसर्पिशोभिरितस्ततश्चन्द्र मरीचिगौरैः ।  
-यस्यार्थयुक्तं गिरिराजशब्दं कुर्वन्ति वालव्यजनैश्चमर्यः ॥ 1. 13 ॥   
+लाङ्गूल-विक्षेप-विसर्पि-शोभैर्  
+इतस् ततश् चन्द्र-मरीचि-गौरैः।  
+**यस्यार्थ-युक्तं गिरि-राज-शब्दं**  
+कुर्वन्ति **वाल-व्यजनैश् चमर्यः**॥१३॥
++++(अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -381,8 +387,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यत्रांशुकाक्षेपविलज्जितानां यदृच्छया किंपुरुषाङ्गनानाम् ।  
-दरीगृहव्दार विलम्बिम्बीम्बास्तिरस्करिण्यो जलदा भवन्ति ॥ 1. 14 ॥   
+यत्रांशुकाक्षेप-विलज्जितानां  
+यद्-ऋच्छया किं-पुरुषाङ्गनानाम्।  
+दरी-गृह-द्वार-विलम्बि-बिम्बास्  
+**तिरस्करिण्यो जलदा** भवन्ति॥१४॥
++++(र५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -403,8 +412,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भागीरथीनिर्झरसिकराणां वोढा मुहमः कम्पितदेवदारुः ।  
-यव्दायुरन्विष्टमृगैः किरातैरासेव्यते भिन्नशिशण्डिबर्हः ॥ 1. 15 ॥   
+भागीरथी-निर्झर-सीकराणां  
+वोढा मुहुः कम्पित-देवदारुः।  
+**यद्-वायुर्** अन्विष्ट-मृगैः किरातैर्  
+**आसेव्यते** भिन्न-शिखण्डि-बर्हः॥१५॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -420,7 +431,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-- भागीरथीति । भागीरथीनिर्झरसीकराणां गङ्गाप्रवाहपाथ:- कणानाम् । कर्मणि षष्ठो । वोढा प्रापकः । वहेस्तृच् । मुहुः पुनः पुनः सद्यो वा । 'पौनः पुन्ये भृशार्थे च सद्यो वा स्यान्मुहुः पदम्' इति वैजयन्ती । कम्पिता देवदाखो येन स तथोक्तः । भिन्नानि विश्लेषितानि शिखण्डिनां बर्हाणि गतिलाघवार्थं किरातकटिबद्धानि येन स तथोक्तः । क्रमाव्दिशेषणत्रयेण शैत्यसौरभ्यमान्द्यान्युक्तानि । यस्य हिमाद्रेर्वायुः । अन्विष्टमृगैर्मार्गितमृगैः । श्रान्तैरिति भावः । 'अन्विष्टं मागितम्' इत्यम्रः । किरातैरासेव्यते ॥ 1. 15 ॥
+भागीरथीति । भागीरथीनिर्झरसीकराणां गङ्गाप्रवाहपाथ:- कणानाम् । कर्मणि षष्ठो । वोढा प्रापकः । वहेस्तृच् । मुहुः पुनः पुनः सद्यो वा । 'पौनः पुन्ये भृशार्थे च सद्यो वा स्यान्मुहुः पदम्' इति वैजयन्ती । कम्पिता देवदाखो येन स तथोक्तः । भिन्नानि विश्लेषितानि शिखण्डिनां बर्हाणि गतिलाघवार्थं किरातकटिबद्धानि येन स तथोक्तः । क्रमाव्दिशेषणत्रयेण शैत्यसौरभ्यमान्द्यान्युक्तानि । यस्य हिमाद्रेर्वायुः । अन्विष्टमृगैर्मार्गितमृगैः । श्रान्तैरिति भावः । 'अन्विष्टं मागितम्' इत्यम्रः । किरातैरासेव्यते ॥ 1. 15 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -445,10 +456,15 @@ title = "०१"
 सप्तर्षोति ॥ सप्त च ते ऋषयश्च सप्तर्षयः । 'दिक्संख्ये संज्ञायाम' इति समासः । तेषां हस्तैरवचितेभ्यो लूनेभ्योऽवशेषाण्यवशिष्टानि । 'शेषाऽप्रधानसंतापे त्रिष्वन्यत्रापयुज्यते' इति केशवः । कर्मण्यण्प्रत्ययः । अनेन पद्मानां साफल्यं सूचितम् । यस्य हिमाद्रेः रोहन्तीतिर रुहाणि । 'इगुपधज्ञाप्रीकिरः कः' इति कप्रत्ययः । अग्र उपरि यानि सरांसि तेषु रुहाणि पद्मान्यधः परिवर्तमानो भ्रमन्विवस्वान्सूर्यं ऊर्ध्वमुखैर्मंयूखैः प्रबोधयति । न कदाचिदधोमुखैः । अतिमार्तण्डमण्डलत्वादग्रभूमेरिति भावः । सप्तर्षिमण्डलं ध्रुवादप्यूर्ध्वमिति ज्यौतिषिकाः । अतस्तेषामग्रसरोरुहभागित्वं युक्तम् ॥ 1. 16 ॥
 </details>
 
+## प्रतिष्ठा, परिवारः
++++(क५)+++
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यज्ञाङ्गयोनित्वमवेक्ष्य यस्य सारं धरित्रीधरणक्षमं च ।  
-प्रजापतिः कल्पितयज्ञभागं शैलाधिपत्यं स्वयमन्वतिष्ठत् ॥ 1. 17 ॥   
++++(सोमादि-)+++यज्ञाङ्ग-योनित्वम् **अवेक्ष्य यस्य**  
+सारं धरित्री-धरण-क्षमं च।  
+**प्रजापतिः** कल्पित-यज्ञ-भागं  
+**शैलाधिपत्यं** +++(अस्यास्त्व् इति)+++ स्वयम् **अन्वतिष्ठत्** ॥१७॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -464,19 +480,21 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-यज्ञाङ्गेति ॥ यस्य हिमाद्रेर्यज्ञाङ्गानां यज्ञसाधनानां सोमलतादीनां योनिः प्रभवस्तस्य भावस्तत्त्वम् । 'यज्ञाङ्गार्थं मया सृष्टो हिमवानचलेश्वरः' इति विष्णुपुराणात् । धरित्रीधरणक्षमं भूभारधरणयोग्यं सारं बलं च । 'सारो बले स्थिरांशे च' इत्यमरः । अवेक्ष्य ज्ञात्वा प्रजापतिः स्वयमेव कल्पितो यज्ञभागो यस्मिंस्तत्तथोक्तम् । 'सोमस्य राज्ञः कुरङ्ग इन्द्रोः श्रृङ्गी समुद्रस्य शिशुमारो हिमवतो हस्ती' इति श्रुतेरिति भावः । शैलानामाधिपत्यमधिपतित्वम् । 'पत्यन्तपुरोहितादिभ्यो यक्' इति यक्प्रत्ययः । अन्वतिष्ठत् । ददाति स्मेत्यर्थः । उक्तं च ब्रह्माण्डपुराणे-'शैलानां हिमवन्तं च नदीनां चैव सागरम् । गन्धर्वाणामधिपतिं चक्रे चित्ररथं विधिः' इति ॥ 1. 17 ॥
+यज्ञाङ्गेति ॥ यस्य हिमाद्रेर्यज्ञाङ्गानां यज्ञसाधनानां सोमलतादीनां योनिः प्रभवस्तस्य भावस्तत्त्वम् । 'यज्ञाङ्गार्थं मया सृष्टो हिमवानचलेश्वरः' इति विष्णुपुराणात् । धरित्रीधरणक्षमं भूभारधरणयोग्यं सारं बलं च । 'सारो बले स्थिरांशे च' इत्यमरः । अवेक्ष्य ज्ञात्वा प्रजापतिः स्वयमेव कल्पितो यज्ञभागो यस्मिंस्तत्तथोक्तम् । 'सोमस्य राज्ञः कुरङ्ग इन्द्रोः श्रृङ्गी समुद्रस्य शिशुमारो हिमवतो हस्ती' इति श्रुतेरिति भावः । शैलानामाधिपत्यमधिपतित्वम् । 'पत्यन्तपुरोहितादिभ्यो यक्' इति यक्प्रत्ययः । **अन्वतिष्ठत्** । ददाति स्मेत्यर्थः । उक्तं च ब्रह्माण्डपुराणे-'शैलानां हिमवन्तं च नदीनां चैव सागरम् । गन्धर्वाणामधिपतिं चक्रे चित्ररथं विधिः' इति ॥ 1. 17 ॥
+
+संप्रति कथां प्रस्तौति--
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-'    संप्रति कथां प्रस्तौति--  
-स मानसिं मेरुसखः पितॄणां कन्यां कुलस्य स्थितये स्थितिज्ञः ।  
-मेनां मुनीनामपि माननीयामात्मानुरुपां विधिनोपयेमे ॥ 1. 18 ॥  
+स मानसीं मेरु-सखः पितॄणां  
+कन्यां कुलस्य स्थितये स्थितिज्ञः।  
+**मेनां** मुनीनाम् अपि माननीयाम्  
+आत्मानुरुपां **विधिनोपयेमे**॥१८॥
 </details>
 
 <details><summary>मूलम्</summary>
 
-'    संप्रति कथां प्रस्तौति--  
 स मानसिं मेरुसखः पितॄणां कन्यां कुलस्य स्थितये स्थितिज्ञः ।  
 मेनां मुनीनामपि माननीयामात्मानुरुपां विधिनोपयेमे ॥ 1. 18 ॥  
 </details>
@@ -493,8 +511,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कालक्रमेणाथ तयोः प्रवृत्ते स्वरुपयोग्ये सुरतप्रसङ्गे ।  
-मनोरमं यौवनमुद्वहन्त्या गर्भेऽवद्भूधरराजपत्न्याः ॥ 1. 19 ॥  
+काल-क्रमेणाथ तयोः प्रवृत्ते  
+स्वरुप-योग्ये **सुरत-प्रसङ्गे**।  
+मनोरमं यौवनम् उद्वहन्त्या  
+**गर्भो ऽभवद्** भूधरराजपत्न्याः॥१९॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -515,8 +535,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-असूत सा नागवधूपभोग्यं मैनाकमम्भोनिधिबद्धसख्यम् ।  
-क्रुद्धेऽपि पक्षच्छिदि वृत्रशत्राववेदनाज्ञं कुलिशक्षतानाम् ॥ 1. 20 ॥  
+**असूत** सा नाग-वधू+उपभोग्यं  
+**मैनाकम्** अम्भो-निधि-बद्ध-सख्यम्।  
+क्रुद्धेऽपि पक्षच्छिदि वृत्र-शत्राव्  
+अ-वेदना-ज्ञं कुलिश-क्षतानाम्॥२०॥  
++++(र५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -535,10 +558,14 @@ title = "०१"
 असूतेति । सा मेना नागवधूपभोग्यम् । नगकन्यापरिणेतारमित्यर्थः । अम्भोनिधिना बद्धसख्यं समुद्रकृतमैत्रीकम् । सख्यमूलंसूचयति- पक्षच्छिदि पक्षच्छेत्तरि । 'सत्सूद्विषे-' त्यादिना क्विप्प्रत्ययः । वृत्रशत्रौ क्रृद्धे कुपिते सत्यपि कुलिशक्षतानां वज्रप्रहाराणाम्। संबन्धसामान्ये षष्ठी । जानातीति ज्ञः । 'इगुपधज्ञा-' इति कप्रत्ययः । वेदनानां ज्ञः । अथवा वेदनां जानातीति वेदनाज्ञः । 'आतोऽनुपसर्गे कः' इति कप्रत्ययः । 'उपपदमतिङ्' इति समासः । स न भवतात्यवेदनाज्ञस्तम् । कुलिशक्षतवेदनानभिज्ञमित्यर्थः । सापेक्षत्वेऽपि गमकत्वात्समासः । पक्षच्छेदोद्यतशक्रात्त्राणाय शरणागमनमनयोः सख्यमूलमिति भावः । मैनाकं पुत्रमसूत । सर्वपर्वंतपक्षच्छेदेऽप्ययमच्छिन्नपक्ष एवेति मैनाकस्योत्कर्षः । तादृक्पुत्रवत्त्वं हिमाद्रेरिति सार्थकं मैनाकस्य वर्णनम् । 'पिता न ज्ञायते यस्या भ्राता यदि न विद्यते । नोपयच्छेत्तु तां कन्यां धर्मलोपभयात्सुधीः ।' इत्यभ्रातृकन्यापरिणयनिषेधात्प्रकृते पार्वती भ्रातृमत्येवेति सूचनार्थं मैनाकपर्वतमिति तात्पर्यार्थः ॥ 1. 20 ॥
 </details>
 
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-21-30.mp3"></div>
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथावमानेन पितुः प्रयुक्ता दक्षस्य कन्या भवपूर्वपत्नी ।  
-सती सती योगविसृष्टदेहा तां जन्मने शैलवधूं प्रपेदे ॥ 1. 21 ॥  
+अथावमानेन पितुः प्रयुक्ता  
+दक्षस्य कन्या भव-पूर्व-पत्नी।  
+**सती** सती योग-विसृष्ट-देहा  
+**तां जन्मने** शैलवधूं **प्रपेदे**॥२१॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -559,8 +586,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सा भूधराणामधिपेन तस्यां समाधिमत्यामुदपादि भव्या ।  
-सम्यक्प्रयोगादपरिक्षतायां नीताविवोत्साहगुणेन संपत् ॥ 1. 22 ॥  
+**सा** भू-धराणाम् अधिपेन तस्यां  
+समाधिमत्याम्+++(=नियमवत्याम्)+++ **उदपादि** भव्या।  
+सम्यक् प्रयोगाद् अ-परिक्षतायां  
+**नीताव् इवोत्साहगुणेन संपत्**॥२२॥  
++++(अ५ र५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -581,8 +611,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रसन्नदिक्पांसुविविक्तवातं शङ्खस्वनानन्तरपुष्पवृष्टि ।  
-शरीरिणां स्थावरजङ्गमानां सुखाय तज्जन्मदिनं बभुव ॥ 1. 23 ॥  
+प्रसन्न-दिक् पांसु-विविक्त-वातं  
+शङ्ख-स्वनानन्तर-पुष्प-वृष्टि।  
+शरीरिणां स्थावर-जङ्गमानां  
+**सुखाय तज्-जन्म-दिनं** बभूव॥२३॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -603,8 +635,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तया दुहित्रा सुतरां सवित्री स्फुरत्प्रभामण्डलया चकासे ।  
-विदूरभूमिर्नवमेघशब्दा दुद्भिन्नया रत्नशलाकयैव ॥ 1. 24 ॥  
+तया दुहित्रा सुतरां **सवित्री**  
+स्फुरत्-प्रभा-मण्डलया **चकासे**।  
+विदूर-भूमिर् नव-मेघ-शब्दाद्  
+उद्भिन्नया रत्न-शलाकयैव॥२४॥  
++++(अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -623,10 +658,14 @@ title = "०१"
 तयेति ॥ स्फुरत्प्रभामण्डलया तया दुहित्रा सवित्री जनयित्री । 'स्वरतिसूतिसूयतिधूञूदितो वा' इतीडागमः । विदूरस्याद्रेः प्रान्तभूमिर्विदूरभूमिः । 'अवदूरं विदूरस्य गिरेरुत्तुङ्गरोधसः । काकतालीयसीमान्ते मणीनामाकरो भवेत् ॥' इति बुद्धः । नवमेघशब्दादुद्भिन्नया रत्नशलाकया रत्नाङ्कुरेव सुतरां चकासे रराज ॥ 1. 24 ॥
 </details>
 
+## पार्वतीवर्धनम्
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-दिने दिने सा परिवर्धमाना लब्धोदया चान्द्रमसीव लेख ।  
-पुपोष लावण्यमयान्विशेषाञ्जयोत्स्नान्तराणीव कलान्तराणि ॥ 1. 25 ॥  
+दिने दिने सा परिवर्धमाना  
+लब्धोदया चान्द्रमसीव लेखा।  
+**पुपोष** लावण्यमयान् **विशेषाञ्**  
+ज्योत्स्नान्तराणीव कलान्तराणि॥२५॥+++(5)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -647,8 +686,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तां पार्वतीत्याभिजनेन नाम्ना बन्धुप्रियां बन्धजनो जहाव ।  
-उमेति मात्रा तपसो निषिद्धा पश्चादुमाख्यां सुमुखो जगाम ॥ 1. 26 ॥  
+तां **पार्वतीत्य्** आभिजनेन नाम्ना  
+बन्धु-प्रियां बन्धु-जनो **जुहाव**।  
+"उ+++(विस्मये)+++ मे"ति मात्रा तपसो निषिद्धा  
+पश्चाद् **उमाख्यां** सुमुखी **जगाम**॥२६॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -669,8 +710,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-महीभृतः पुत्रवतोऽपि दृष्टिस्तस्मिन्नपत्ये न जगाम तृप्तिम् ।  
-अनन्तपुष्पस्य मधोर्हि चूते द्विरेफमाला सविशेषसङ्गा ॥ 1.27 ॥  
+महीभृतः पुत्रवतो ऽपि दृष्टिस्  
+तस्मिन्न् अपत्ये **न जगाम तृप्तिम्**।  
+अनन्त-पुष्पस्य मधोर्+++(=वसन्तस्य)+++ हि चूते  
+द्विरेफ-माला स-विशेष-सङ्गा॥ १.२७॥  
++++(अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
