--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -735,8 +735,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रभामहत्या शिखयेव दीपस्त्रिमार्गयेव त्रिदिवस्य मार्गः ।  
-संस्कारवत्येव गिरा मनीषी तया स पूतश्च विभूषितश्च ॥ 1. 28 ॥  
+प्रभा-महत्या शिखयेव दीपस्,  
+त्रिमार्गयेव त्रिदिवस्य मार्गः।  
+संस्कारवत्य् एव गिरा मनीषी +++(हिमवान्)+++  
+**तया स पूतश्** च विभूषितश् च॥२८॥  
++++(अ५ र५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -752,7 +755,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-प्रभेति । प्रभामहत्या प्रकाशाधिकया शिखया ज्वालया दीप इव । शिखादीपयोरवयवावयविभावाद्भेदेन व्यपदेशः । त्रयो मार्गा यस्यास्तया त्रिमार्गया मन्दाकिन्या । तृतीया द्यौर्लेक इति त्रिदिवः स्वर्गः । वृत्तिविषये त्रिशब्दस्य त्रिभागवत्पूरणार्थत्वम् पृषोदरादित्वाद्दिव्शब्दादकारागमः । पुंस्त्वं लोकात् । दीव्यतेर्घञर्थे कविधानम् । दीव्यन्त्यत्र जना इति क्षीरस्वामी । तस्य मार्ग इव । संस्कारो व्याकरणजन्या शुद्धिस्तद्वत्या गिरा वाचा । 'भद्रैषां लक्ष्मीर्निहिताधि वाचि' इति श्रुतेरिति भावः । मनस ईषा मनीषा सास्यास्तीति मनीषी विद्वानिव । शकन्ध्वादित्वात्साधुः ।तया पार्वत्या स हिमवान्पूतः शोधितश्च विभूषितश्च । अत्र शिखागिरोरविशिष्टयोरुपमानानर्हत्वान्न विशेषणाधिक्यदोषः । इयं मालोपमा ॥ 1. 28 ॥
+प्रभेति । प्रभामहत्या प्रकाशाधिकया शिखया ज्वालया दीप इव । शिखादीपयोरवयवावयविभावाद्भेदेन व्यपदेशः । त्रयो मार्गा यस्यास्तया त्रिमार्गया मन्दाकिन्या । तृतीया द्यौर्लेक इति त्रिदिवः स्वर्गः । वृत्तिविषये त्रिशब्दस्य त्रिभागवत्पूरणार्थत्वम् पृषोदरादित्वाद्दिव्शब्दादकारागमः । पुंस्त्वं लोकात् । दीव्यतेर्घञर्थे कविधानम् । दीव्यन्त्यत्र जना इति क्षीरस्वामी । तस्य मार्ग इव । संस्कारो व्याकरणजन्या शुद्धिस्तद्वत्या गिरा वाचा । 'भद्रैषां लक्ष्मीर्निहिताधि वाचि' इति श्रुतेरिति भावः । मनस ईषा मनीषा सास्यास्तीति **मनीषी** विद्वानिव । शकन्ध्वादित्वात्साधुः । तया पार्वत्या स हिमवान् पूतः शोधितश्च विभूषितश्च । अत्र शिखागिरोरविशिष्टयोरुपमानानर्हत्वान्न विशेषणाधिक्यदोषः । इयं मालोपमा ॥ 1. 28 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
