--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -760,8 +760,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मन्दाकिनीसैकतवेदिकाभिः सा कन्दुकैः कृत्रिमपुत्रकैश्च ।  
-रेमे मुहिर्मध्यगता सखीनां क्रीडारसं निर्विशतीव बाल्ये ॥ 1. 29 ॥  
+मन्दाकिनी-सैकत-वेदिकाभिः  
+सा कन्दुकैः कृत्रिम-पुत्रकैश् च।  
+**रेमे** मुहुर् मध्यगता सखीनां  
+**क्रीडा-रसं निर्विशतीव** बाल्ये॥२९॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -782,8 +784,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तां हंसमालाः शरदीव गङ्गां महौषधिं नक्तमिवात्मभासः ।  
-स्थिरोपदेशामुपदेशकाले प्रपेदिरे प्राक्तनजन्मविद्याः ॥ 1. 30 ॥  
+**तां** हंस-मालाः शरदीव गङ्गां,  
+महौषधिं नक्तम् इवात्म-भासः।  
+स्थिरोपदेशाम् उपदेश-काले  
+**प्रपेदिरे प्राक्तन-जन्म-विद्याः**॥३०॥  
++++(र५ अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -802,10 +807,15 @@ title = "०१"
 तामिति ॥ स्थिरः स्थेयानुपदेशः प्राग्भवीयो यस्यास्तादृशीम् । मेधामिनोमित्यर्थः । तां पार्वतीमुपदेशकाले प्राक्तनजन्मविद्याः । पूर्वजन्माभ्यस्तविद्या इत्यर्थः । शरदि गङ्गां हंसमाला इव नक्तं रात्रौ महौषधिं तृणविशेषमात्मभासः स्वदीप्तय इव प्रपेदिरे । उपमानसामर्थ्यादुपदेशमन्तरेणैवेति गम्यते ॥ 1. 30 ॥
 </details>
 
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-31-43.mp3"></div>
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-असंभृतं मण्डनमङ्गयष्टेरनासवाख्यं करणं मदस्य ।  
-कामस्य पुष्पव्यतिरिक्तमस्त्रं बाल्यात्परं साथ वयः प्रपेदे ॥ 1. 31 ॥  
+अ-सम्भृतं **मण्डनम्** अङ्ग-यष्टेर्,  
+अनासवाख्यं+++(=सुरा-रहिताख्यम्)+++ **करणं** मदस्य।  
+कामस्य पुष्प-व्यतिरिक्तम् **अस्त्रं**  
+बाल्यात् परं +++(यौवनाख्यं)+++ साथ **वयः प्रपेदे**॥३१॥
++++(अ५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -821,19 +831,19 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-असंभृतमिति । अथ सा पार्वती । अङ्गयष्टेरसंभृतमयत्नसिद्धं मण्डनं प्रसाधनमनासवाख्यमासवाख्यारहितं मदस्य करणं साधनं कामस्य पुष्पव्यतिरिक्तमस्त्रमस्त्रभूतं बाल्याच्छैशव त्परमनन्तरभावि वयो यौवनं प्रपेते प्राप । यौवनेनैव हि युवतयः प्रमाध्यन्ते माद्यन्ते काम्यन्ते चेति भावः । अत्र व्दितीयपाद आसवरुपकारणाभावेऽपि तत्कार्यमदोक्तेर्विभावनालंकारः । तदुक्तम्- 'कारणाभावे कार्योत्पतिर्विभावना' इति । प्रथमतृतीययोस्त्वारोप्यमाणयोर्मण्डनमदनास्त्रत्वयोः प्रकृतोपयोगात्परिणामालंकारः । तल्लक्षणं तृक्तम् ॥ 1. 31 ॥
+असंभृतमिति । अथ सा पार्वती । अङ्गयष्टेरसंभृतमयत्नसिद्धं मण्डनं प्रसाधनमनासवाख्यमासवाख्यारहितं मदस्य करणं साधनं कामस्य पुष्पव्यतिरिक्तमस्त्रमस्त्रभूतं बाल्याच्छैशव त्परमनन्तरभावि वयो यौवनं प्रपेते प्राप । यौवनेनैव हि युवतयः प्रमाध्यन्ते माद्यन्ते काम्यन्ते चेति भावः । अत्र व्दितीयपाद आसवरुपकारणाभावेऽपि तत्कार्यमदोक्तेर्विभावनालंकारः । तदुक्तम्- 'कारणाभावे कार्योत्पतिर्विभावना' इति । प्रथमतृतीययोस्त्वारोप्यमाणयोर्मण्डनमदनास्त्रत्वयोः प्रकृतोपयोगात्परिणामालंकारः । तल्लक्षणं तृक्तम् 'स्यादङ्गयष्टिर् इत्येवंविधम् आभासरुपकम् ।' ॥ 1. 31 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-'स्यादङ्गयष्टिरित्येवविधमाभासरुपकम् ।' ॥ 1. 31 ॥  
-उन्मीलितं तूलिकयेव चित्रं सूर्यांशुभिर्भिन्नमिवारविन्दम् ।  
-बभूव तस्यश्चतुरस्त्रशोभि वपुर्विभक्तं नवयौवनेन ॥ 1. 32 ॥  
+उन्मीलितं तूलिकयेव चित्रं,  
+सूर्यांशुभिर् भिन्नम् इवारविन्दम्।  
+बभूव तस्याश् चतुर्-अस्र+++(=कोण)+++-शोभि  
+**वपुर् विभक्तं** नवयौवनेन॥३२॥
 </details>
 
 <details><summary>मूलम्</summary>
 
-'स्यादङ्गयष्टिरित्येवविधमाभासरुपकम् ।' ॥ 1. 31 ॥  
 उन्मीलितं तूलिकयेव चित्रं सूर्यांशुभिर्भिन्नमिवारविन्दम् ।  
 बभूव तस्यश्चतुरस्त्रशोभि वपुर्विभक्तं नवयौवनेन ॥ 1. 32 ॥  
 </details>
